--- a/.github/workflows/modul8.yml
+++ b/.github/workflows/modul8.yml
@@ -7,7 +7,7 @@
   # Triggers the workflow on push or pull request events but only for the main brancg
     push: 
       paths: 
-      - 'course github-terraform/Modul8/**'
+      - 'course Modul8/**'
 
     # Allows you to run this workflow manually form the Actions tab
     workflow_dispatch:
@@ -25,7 +25,7 @@
         ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-        WORKING_DIR: "./course Modul6/github-terraform/Modul8"
+        WORKING_DIR: "Modul8"
 
         
       # Steps represent a sequence of tasks that will be executed as part of the job
