--- a/.github/workflows/modul8.yml
+++ b/.github/workflows/modul8.yml
@@ -7,7 +7,7 @@
   # Triggers the workflow on push or pull request events but only for the main brancg
     push: 
       paths: 
-      - 'course Modul8/**'
+      - 'course Modul8'
 
     # Allows you to run this workflow manually form the Actions tab
     workflow_dispatch:
@@ -31,7 +31,15 @@
       # Steps represent a sequence of tasks that will be executed as part of the job
       steps: 
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-        - uses: actions/checkout@v4
+        - name: Checkout code
+          uses: actions/checkout@v4
+
+        - name: Debug repository structure
+          run: |
+            echo "Current working directory:"
+            pwd
+            echo "Listing all files:"
+            ls -alR
 
         # Runs a single command using the runners shell
         - name: 'Terraform init'
