--- a/.github/workflows/modul8.yml
+++ b/.github/workflows/modul8.yml
@@ -6,8 +6,8 @@
   on:
   # Triggers the workflow on push or pull request events but only for the main brancg
     push: 
-      paths: 
-      - 'course Modul8'
+      branches:
+        - main
 
     # Allows you to run this workflow manually form the Actions tab
     workflow_dispatch:
