--- a/.github/workflows/modul8.yml
+++ b/.github/workflows/modul8.yml
@@ -11,6 +11,11 @@
 
     # Allows you to run this workflow manually form the Actions tab
     workflow_dispatch:
+      inputs:
+        action_type:
+          description: 'What action should be performed= (apply/destroy)'
+          required: true
+          default: 'apply'
 
   # A workflow run is made up of one or more jobs that can run sequentially or in paralell
   jobs:
@@ -53,8 +58,13 @@
           working-directory: ${{ env.WORKING_DIR }}
 
         - name: 'Terraform apply'
+          if: github.event.inputs.action_type == 'apply'
           id: apply
           run: terraform apply -auto-approve
           working-directory: ${{ env.WORKING_DIR }}
-          
+
+        - name: 'Terraorm destroy'
+          if: github.event.inputs.action_type == 'destroy'
+          run: terraform destroy -auto-approve
+          working-directory: ${{ env.WORKING_DIR }}
           
