--- a/.github/workflows/modul8.yml
+++ b/.github/workflows/modul8.yml
@@ -10,21 +10,22 @@
         - 'github-terraform/Modul8/**'
 
     # Allows you to run this workflow manually form the Actions tab
-    workflow_dispatch:
-      inputs:
-        action_type:
-          description: 'What action should be performed= (apply/destroy)'
-          required: true
-          default: 'apply'
-          type: choice
-          options:
-            - 'apply'
-            - 'destroy'
+    # workflow_dispatch:
+      # inputs:
+        # action_type:
+          # description: 'What action should be performed= (apply/destroy)'
+          # required: true
+          # default: 'apply'
+          # type: choice
+          # options:
+            # - 'apply'
+            # - 'destroy'
 
   # A workflow run is made up of one or more jobs that can run sequentially or in paralell
   jobs:
     # This workflow contains a single job called "build"
-    resourcegroups:
+    # resourcegroups:
+    terraform:
       # The type of runner that the job will run on
       runs-on: ubuntu-latest
 
@@ -61,14 +62,26 @@
           run: terraform plan
           working-directory: ${{ env.WORKING_DIR }}
 
-        - name: 'Terraform apply'
-          if: github.event.inputs.action_type == 'apply'
-          id: apply
-          run: terraform apply -auto-approve
+        - name: 'Check last commit message'
+          id: commit
+          run: echo "::set-output name=message::$(git log --format=%B -n 1)"
+        - name: 'Conditionally run Terraform action'
+          run: |
+            if [[ "${{ steps.commt.output.message }}" == *"destroy"* ]]; then
+              terraform festroy -auto-approve
+            else
+              terraform apply -auto-approve
+            fi
           working-directory: ${{ env.WORKING_DIR }}
 
-        - name: 'Terraorm destroy'
-          if: github.event.inputs.action_type == 'destroy'
-          run: terraform destroy -auto-approve
-          working-directory: ${{ env.WORKING_DIR }}
+        # - name: 'Terraform apply'
+          # ifsetning: github.event.inputs.action_type == 'apply'
+          # id: apply
+          # run: terraform apply -auto-approve
+          # working-directory: 
+
+        # - name: 'Terraorm destroy'
+          # ifsetning: github.event.inputs.action_type == 'destroy'
+          # run: terraform destroy -auto-approve
+          # working-directory: 
           
