--- a/.github/workflows/modul8.yml
+++ b/.github/workflows/modul8.yml
@@ -9,22 +9,9 @@
       paths:
         - 'github-terraform/Modul8/**'
 
-    # Allows you to run this workflow manually form the Actions tab
-    # workflow_dispatch:
-      # inputs:
-        # action_type:
-          # description: 'What action should be performed= (apply/destroy)'
-          # required: true
-          # default: 'apply'
-          # type: choice
-          # options:
-            # - 'apply'
-            # - 'destroy'
-
   # A workflow run is made up of one or more jobs that can run sequentially or in paralell
   jobs:
-    # This workflow contains a single job called "build"
-    # resourcegroups:
+    # This workflow contains a single job called "web"
     terraform:
       # The type of runner that the job will run on
       runs-on: ubuntu-latest
@@ -67,14 +54,5 @@
             fi
           working-directory: ${{ env.WORKING_DIR }}
 
-        # - name: 'Terraform apply'
-          # ifsetning: github.event.inputs.action_type == 'apply'
-          # id: apply
-          # run: terraform apply -auto-approve
-          # working-directory: 
 
-        # - name: 'Terraorm destroy'
-          # ifsetning: github.event.inputs.action_type == 'destroy'
-          # run: terraform destroy -auto-approve
-          # working-directory: 
           
