--- a/.github/workflows/modul8.yml
+++ b/.github/workflows/modul8.yml
@@ -47,7 +47,7 @@
           run: echo "::set-output name=message::$(git log --format=%B -n 1)"
         - name: Conditionally run Terraform action
           run: |
-            if [[ "${{ steps.commit.output.message }}" == *"destroy"* ]]; then
+            if [[ "${{ steps.commit.outputs.message }}" == *"destroy"* ]]; then
               terraform destroy -auto-approve
             else
               terraform apply -auto-approve
