--- a/.github/workflows/modul8.yml
+++ b/.github/workflows/modul8.yml
@@ -22,7 +22,7 @@
         ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-        WORKING_DIR: "Modul8"
+        WORKING_DIR: ./github-terraform/Modul8
 
         
       # Steps represent a sequence of tasks that will be executed as part of the job
